# django-ninja-project

./: .dockerignore  .env_template  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yaml  pyproject.toml
.github/workflows/: ci_cd.yml  ci_cd_prod.yml
apps/accounts/: admin.py  api.py  emails.py  factory.py  models.py  signals.py  test_api.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/schemas/: __init__.py  account.py  auth.py  test_account.py
apps/accounts/templates/accounts/emails/: forgot_password_request.html
apps/core/: errors.py  schemas.py  test_helpers.py  testing.py  utils.py
apps/core/email/: email.py  test_email.py
project/: api.py  urls.py
project/settings/: local.py  test.py
